# Pancake-Engine-2D

./: .gitmodules  CMakeLists.txt  Pancake Engine 2D.cpp  Pancake Engine 2D.h  README.md
Editor/: CMakeLists.txt
Editor/include/: EditorUI.h
Editor/src/: EditorUI.cpp  main.cpp
Engine/: CMakeLists.txt
Engine/include/: Engine.h  Game.h  GameObject.h  Point2D.h  PrimitiveRenderer.h  Scene.h
Engine/src/: Engine.cpp  Game.cpp  GameObject.cpp  Point2D.cpp  PrimitiveRenderer.cpp  Scene.cpp
